--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/gerherz/react-native-picker-modal",
   "author": "Gerardo Herz <gerherz@protonmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "react-native-vector-icons": "^4.4.3"
+  }
 }
