Have Cecil's changes but Use default props so onClose prop doesn't have to be specified

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react-native-vector-icons": "^4.4.3"
   }
 }
